--- a/sensappdroid-main/res/values/strings.xml
+++ b/sensappdroid-main/res/values/strings.xml
@@ -43,7 +43,10 @@
 	<string name="pref_autoupload_delay_key">pref_autoupload_delay_key</string>
 	<string name="pref_default_server_key">pref_default_server_key</string>
 	<string name="pref_default_port_key">pref_default_port_key</string>
-	<string name="pref_server_default_value">http://mysensapp.org</string>
+    <string name="pref_server_default_value">http://mysensapp.org</string>
+    <string name="pref_ws_server_key">pref_ws_server_key</string>
+    <string name="pref_ws_port_key">pref_ws_port_key</string>
+    <string name="pref_server_ws_value">ws://mysensapp.org</string>
 	<string name="pref_undo_upload_key">pref_undo_upload_key</string>
 	<string name="measure_icon_description">measure icon</string>
 	<string name="sensor_icon_description">sensor icon</string>
